--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
 # Title of your site
-title = "Muhammad Chenariyan Nakhaee"
+title = "Academic"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
@@ -21,7 +21,6 @@ copyright = ""
 
 # Name of Academic theme folder in `themes/`.
 theme = "hugo-academic"
-
 
 # Get last modified date for content from Git?
 enableGitInfo = false
@@ -67,4 +66,3 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
   category = "categories"
   publication_type = "publication_types"
   author = "authors"
-
